--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
         "start": "nodemon --config ./config.json ./server.js",
         "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
         "dev:frontend": "vue-cli-service build ./src/client/main.js --mode development --watch",
-        "dev:backend": "webpack --progress --mode development --config webpack.config.server.js",
-        "dev:serve": "nodemon --config ./config.json -L --inspect=0.0.0.0:9001 ./src/server/main.js",
-        "build": "webpack --progress --mode production --config webpack.config.server.js && vue-cli-service build ./src/client/main.js",
+        "dev:backend": "webpack --progress --mode development --watch --config webpack.config.server.js",
+        "dev:serve": "nodemon --config ./config.json -L --inspect=0.0.0.0:9001 ./server.js",
+        "build": "webpack --progress --mode production --config webpack.config.server.js && vue-cli-service build --no-unsafe-inline ./src/client/main.js",
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
@@ -31,6 +31,13 @@
         "vue-router": "^3.4.9"
     },
     "devDependencies": {
+        "@babel/core": "^7.12.10",
+        "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.1",
+        "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
+        "@babel/plugin-proposal-optional-chaining": "^7.12.7",
+        "@babel/plugin-transform-runtime": "^7.12.10",
+        "@babel/preset-env": "^7.12.11",
+        "@babel/runtime": "^7.12.5",
         "@types/vue": "^2.0.0",
         "@vue/cli-plugin-babel": "~4.5.0",
         "@vue/cli-plugin-eslint": "~4.5.0",
