--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "lodash": "^4.17.20",
         "mongoose": "^5.11.8",
         "ms": "^2.1.3",
+        "source-map-support": "^0.5.19",
         "uuid": "^8.3.2",
         "vue": "^2.6.11",
         "vue-i18n": "^8.22.2",
@@ -31,13 +32,20 @@
     },
     "devDependencies": {
         "@babel/core": "^7.12.10",
+        "@babel/node": "^7.12.10",
+        "@babel/plugin-proposal-export-default-from": "^7.12.1",
         "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.1",
         "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
         "@babel/plugin-proposal-optional-chaining": "^7.12.7",
+        "@babel/plugin-syntax-export-default-from": "^7.12.1",
+        "@babel/plugin-transform-modules-commonjs": "^7.12.1",
         "@babel/plugin-transform-runtime": "^7.12.10",
+        "@babel/polyfill": "^7.12.1",
         "@babel/preset-env": "^7.12.11",
+        "@babel/preset-es2015": "^7.0.0-beta.53",
         "@babel/runtime": "^7.12.5",
         "@types/vue": "^2.0.0",
+        "@types/webpack": "^4.41.25",
         "@vue/cli-plugin-babel": "~4.5.0",
         "@vue/cli-plugin-eslint": "~4.5.0",
         "@vue/cli-service": "~4.5.0",
