--- a/package.json
+++ b/package.json
@@ -33,17 +33,8 @@
     "devDependencies": {
         "@babel/core": "^7.12.10",
         "@babel/node": "^7.12.10",
-        "@babel/plugin-proposal-export-default-from": "^7.12.1",
         "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.1",
-        "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
         "@babel/plugin-proposal-optional-chaining": "^7.12.7",
-        "@babel/plugin-syntax-export-default-from": "^7.12.1",
-        "@babel/plugin-transform-modules-commonjs": "^7.12.1",
-        "@babel/plugin-transform-runtime": "^7.12.10",
-        "@babel/polyfill": "^7.12.1",
-        "@babel/preset-env": "^7.12.11",
-        "@babel/preset-es2015": "^7.0.0-beta.53",
-        "@babel/runtime": "^7.12.5",
         "@types/vue": "^2.0.0",
         "@types/webpack": "^4.41.25",
         "@vue/cli-plugin-babel": "~4.5.0",
@@ -54,12 +45,15 @@
         "cache-loader": "^4.1.0",
         "eslint": "^6.7.2",
         "eslint-plugin-vue": "^6.2.2",
-        "jsconfig-paths-webpack-plugin": "^0.1.3",
+        "fork-ts-checker-webpack-plugin": "^6.0.8",
         "less": "^3.12.2",
         "less-loader": "^7.1.0",
         "nodemon": "^2.0.6",
         "terser-webpack-plugin": "^4.2.3",
         "thread-loader": "^3.0.1",
+        "ts-loader": "^8.0.12",
+        "tsconfig-paths-webpack-plugin": "^3.3.0",
+        "typescript": "^4.1.3",
         "vue-template-compiler": "^2.6.11",
         "webpack": "^4.44.2",
         "webpack-cli": "^3.3.12",
