--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "@babel/plugin-proposal-optional-chaining": "^7.12.7",
         "@types/vue": "^2.0.0",
         "@types/webpack": "^4.41.25",
+        "@types/webpack-env": "^1.16.0",
         "@vue/cli-plugin-babel": "~4.5.0",
         "@vue/cli-plugin-eslint": "~4.5.0",
         "@vue/cli-service": "~4.5.0",
