--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     },
     "dependencies": {
         "app-root-path": "^3.0.0",
+        "bcryptjs": "^2.4.3",
         "compression": "^1.7.4",
         "concurrently": "^5.3.0",
         "connect-mongodb-session": "^2.4.1",
@@ -24,6 +25,8 @@
         "lodash": "^4.17.20",
         "mongoose": "^5.11.8",
         "ms": "^2.1.3",
+        "passport": "^0.4.1",
+        "passport-local": "^1.0.0",
         "source-map-support": "^0.5.19",
         "uuid": "^8.3.2",
         "vue": "^2.6.11",
