--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "ms": "^2.1.3",
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
+        "passport-local-mongoose": "^6.0.1",
         "source-map-support": "^0.5.19",
         "uuid": "^8.3.2",
         "vue": "^2.6.11",
