--- a/package.json
+++ b/package.json
@@ -37,8 +37,11 @@
     "devDependencies": {
         "@babel/core": "^7.12.10",
         "@babel/node": "^7.12.10",
+        "@babel/plugin-proposal-decorators": "^7.12.12",
         "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.1",
         "@babel/plugin-proposal-optional-chaining": "^7.12.7",
+        "@babel/plugin-syntax-decorators": "^7.12.1",
+        "@types/express": "^4.17.9",
         "@types/vue": "^2.0.0",
         "@types/webpack": "^4.41.25",
         "@types/webpack-env": "^1.16.0",
