--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "express-session": "^1.17.1",
         "helmet": "^4.2.0",
         "hpp": "^0.2.3",
+        "http-errors": "^1.8.0",
         "lodash": "^4.17.20",
         "mongoose": "^5.11.8",
         "ms": "^2.1.3",
