--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "passport-local-mongoose": "^6.0.1",
         "source-map-support": "^0.5.19",
         "uuid": "^8.3.2",
+        "validator": "^13.5.2",
         "vue": "^2.6.11",
         "vue-i18n": "^8.22.2",
         "vue-router": "^3.4.9"
@@ -43,6 +44,9 @@
         "@babel/plugin-proposal-optional-chaining": "^7.12.7",
         "@babel/plugin-syntax-decorators": "^7.12.1",
         "@types/express": "^4.17.9",
+        "@types/passport": "^1.0.4",
+        "@types/passport-local": "^1.0.33",
+        "@types/validator": "^13.1.2",
         "@types/vue": "^2.0.0",
         "@types/webpack": "^4.41.25",
         "@types/webpack-env": "^1.16.0",
