--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "lodash": "^4.17.20",
         "mongoose": "^5.11.8",
         "ms": "^2.1.3",
+        "nodemailer": "^6.4.17",
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
         "passport-local-mongoose": "^6.0.1",
