--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
         "helmet": "^4.3.1",
         "hpp": "^0.2.3",
         "http-errors": "^1.8.0",
+        "i18next": "^19.8.4",
+        "i18next-http-middleware": "^3.0.6",
         "lodash": "^4.17.20",
         "mongoose": "^5.11.8",
         "ms": "^2.1.3",
