--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "mongoose": "^5.11.8",
         "ms": "^2.1.3",
         "nodemailer": "^6.4.17",
+        "nunjucks": "^3.2.2",
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
         "passport-local-mongoose": "^6.0.1",
@@ -48,6 +49,7 @@
         "@babel/plugin-proposal-optional-chaining": "^7.12.7",
         "@babel/plugin-syntax-decorators": "^7.12.1",
         "@types/express": "^4.17.9",
+        "@types/nunjucks": "^3.1.3",
         "@types/passport": "^1.0.4",
         "@types/passport-local": "^1.0.33",
         "@types/validator": "^13.1.2",
@@ -66,6 +68,7 @@
         "less": "^4.0.0",
         "less-loader": "^7.2.1",
         "nodemon": "^2.0.6",
+        "renewed-nunjucks-loader": "file:./webpack/renewed-nunjucks-loader",
         "terser-webpack-plugin": "^4.2.3",
         "thread-loader": "^3.0.1",
         "ts-loader": "^8.0.12",
