--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "validator": "^13.5.2",
         "vue": "^2.6.11",
         "vue-i18n": "^8.22.2",
+        "vue-material-design-icons": "^4.11.0",
         "vue-router": "^3.4.9"
     },
     "devDependencies": {
