--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "start": "nodemon --config ./config.json ./server.js",
+        "start": "pm2 start ecosystem.config.js",
         "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
         "dev:frontend": "vue-cli-service build --mode development --watch",
         "dev:backend": "webpack --mode development --watch --config webpack.config.server.js",
-        "dev:serve": "nodemon --config ./config.json -L --inspect=0.0.0.0:9001 ./server.js",
+        "dev:serve": "pm2 start ecosystem.config.js --env development",
         "build": "webpack --mode production --config webpack.config.server.js && vue-cli-service build --no-unsafe-inline",
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
         "app-root-path": "^3.0.0",
         "bcryptjs": "^2.4.3",
+        "command-line-args": "^5.1.1",
         "compression": "^1.7.4",
         "concurrently": "^5.3.0",
         "connect-mongodb-session": "^2.4.1",
@@ -34,13 +35,15 @@
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
         "passport-local-mongoose": "^6.0.1",
+        "pm2": "^4.5.1",
         "source-map-support": "^0.5.19",
         "uuid": "^8.3.2",
         "validator": "^13.5.2",
         "vue": "^2.6.11",
         "vue-i18n": "^8.22.2",
         "vue-material-design-icons": "^4.11.0",
-        "vue-router": "^3.4.9"
+        "vue-router": "^3.4.9",
+        "yaml": "^1.10.0"
     },
     "devDependencies": {
         "@babel/core": "^7.12.10",
