some comments and activate log rotation

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
         "dev:frontend": "vue-cli-service build --mode development --watch",
         "dev:backend": "webpack --mode development --watch --config webpack.config.server.js",
-        "dev:serve": "pm2 start ecosystem.config.js --env development",
+        "dev:serve": "pm2 start ecosystem.config.js --env development --deep-monitoring --source-map-support",
         "build": "webpack --mode production --config webpack.config.server.js && vue-cli-service build --no-unsafe-inline",
         "lint": "vue-cli-service lint"
     },
