--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "scripts": {
         "start": "pm2 start ecosystem.config.js",
+        "stop": "pm2 stop ecosystem.config.js",
         "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
         "dev:frontend": "vue-cli-service build --mode development --watch",
         "dev:backend": "webpack --mode development --watch --config webpack.config.server.js",
