--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "setup": "npm install && pm2 install pm2-logrotate && node ./setup.js"
     },
     "dependencies": {
+        "@pm2/io": "^4.3.5",
         "app-root-path": "^3.0.0",
         "bcryptjs": "^2.4.3",
         "command-line-args": "^5.1.1",
@@ -38,6 +39,7 @@
         "passport-local": "^1.0.0",
         "passport-local-mongoose": "^6.0.1",
         "pm2": "^4.5.1",
+        "pmx": "^1.6.7",
         "prompts": "^2.4.0",
         "source-map-support": "^0.5.19",
         "uuid": "^8.3.2",
