--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "pmx": "^1.6.7",
         "prompts": "^2.4.0",
         "source-map-support": "^0.5.19",
+        "string-strip-html": "^7.0.3",
         "uuid": "^8.3.2",
         "validator": "^13.5.2",
         "vue": "^2.6.11",
@@ -61,6 +62,7 @@
         "@types/nunjucks": "^3.1.3",
         "@types/passport": "^1.0.4",
         "@types/passport-local": "^1.0.33",
+        "@types/string-strip-html": "^5.0.0",
         "@types/validator": "^13.1.2",
         "@types/vue": "^2.0.0",
         "@types/webpack": "^4.41.25",
