--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "mongoose": "^5.11.8",
         "ms": "^2.1.3",
         "nodemailer": "^6.4.17",
+        "normalize-url": "^5.3.0",
         "nunjucks": "^3.2.2",
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
