--- a/package.json
+++ b/package.json
@@ -58,10 +58,12 @@
     "devDependencies": {
         "@babel/core": "^7.12.10",
         "@babel/node": "^7.12.10",
+        "@babel/plugin-proposal-class-properties": "^7.12.1",
         "@babel/plugin-proposal-decorators": "^7.12.12",
         "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.1",
         "@babel/plugin-proposal-optional-chaining": "^7.12.7",
         "@babel/plugin-syntax-decorators": "^7.12.1",
+        "@babel/preset-env": "^7.12.11",
         "@types/express": "^4.17.9",
         "@types/nunjucks": "^3.1.3",
         "@types/passport": "^1.0.4",
@@ -76,6 +78,7 @@
         "@vue/cli-service": "~4.5.0",
         "babel-eslint": "^10.1.0",
         "babel-loader": "^8.2.2",
+        "babel-plugin-add-module-exports": "^1.0.4",
         "cache-loader": "^4.1.0",
         "eslint": "^6.7.2",
         "eslint-plugin-vue": "^6.2.2",
