--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
         "@babel/plugin-syntax-decorators": "^7.12.1",
         "@babel/preset-env": "^7.12.11",
         "@types/express": "^4.17.9",
+        "@types/http-errors": "^1.8.0",
         "@types/nunjucks": "^3.1.3",
         "@types/passport": "^1.0.4",
         "@types/passport-local": "^1.0.33",
