--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "scripts": {
         "start": "pm2 start ecosystem.config.js",
         "stop": "pm2 stop ecosystem.config.js",
+        "restart:dev": "npm stop && npm run dev:serve",
         "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
         "dev:frontend": "vue-cli-service build --mode development --watch",
         "dev:backend": "webpack --mode development --watch --config webpack.config.server.js",
@@ -24,6 +25,8 @@
         "concurrently": "^5.3.0",
         "connect-mongodb-session": "^2.4.1",
         "core-js": "^3.8.1",
+        "csv-string": "^4.0.1",
+        "csvjs": "0.0.7",
         "express": "^4.17.1",
         "express-session": "^1.17.1",
         "graceful-fs": "^4.2.4",
@@ -35,6 +38,7 @@
         "lodash": "^4.17.20",
         "mongoose": "^5.11.8",
         "ms": "^2.1.3",
+        "neat-csv": "^6.0.0",
         "nodemailer": "^6.4.17",
         "normalize-url": "^5.3.0",
         "nunjucks": "^3.2.2",
@@ -64,12 +68,16 @@
         "@babel/plugin-proposal-optional-chaining": "^7.12.7",
         "@babel/plugin-syntax-decorators": "^7.12.1",
         "@babel/preset-env": "^7.12.11",
+        "@types/app-root-path": "^1.2.4",
         "@types/express": "^4.17.9",
         "@types/http-errors": "^1.8.0",
+        "@types/lodash": "^4.14.167",
+        "@types/nodemailer": "^6.4.0",
         "@types/nunjucks": "^3.1.3",
         "@types/passport": "^1.0.4",
         "@types/passport-local": "^1.0.33",
         "@types/string-strip-html": "^5.0.0",
+        "@types/uuid": "^8.3.0",
         "@types/validator": "^13.1.2",
         "@types/vue": "^2.0.0",
         "@types/webpack": "^4.41.25",
