--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "nodemailer": "^6.4.17",
         "normalize-url": "^5.3.0",
         "nunjucks": "^3.2.2",
+        "on-change": "^2.2.2",
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
         "passport-local-mongoose": "^6.0.1",
