--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
         "setup": "npm install && pm2 install pm2-logrotate && node ./setup.js"
     },
     "dependencies": {
+        "@greenlock/manager": "^3.1.0",
         "@pm2/io": "^4.3.5",
+        "acme-http-01-standalone": "^3.0.5",
         "app-root-path": "^3.0.0",
         "bcryptjs": "^2.4.3",
         "command-line-args": "^5.1.1",
@@ -30,6 +32,9 @@
         "express": "^4.17.1",
         "express-session": "^1.17.1",
         "graceful-fs": "^4.2.4",
+        "greenlock": "^4.0.4",
+        "greenlock-express": "^4.0.3",
+        "greenlock-store-fs": "^3.2.2",
         "helmet": "^4.3.1",
         "hpp": "^0.2.3",
         "http-errors": "^1.8.0",
@@ -52,6 +57,7 @@
         "reflect-metadata": "^0.1.13",
         "source-map-support": "^0.5.19",
         "string-strip-html": "^7.0.3",
+        "ursa-optional": "^0.10.2",
         "uuid": "^8.3.2",
         "validator": "^13.5.2",
         "vue": "^2.6.11",
