--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "csv-string": "^4.0.1",
         "csvjs": "0.0.7",
         "express": "^4.17.1",
+        "express-fileupload": "^1.2.1",
         "express-session": "^1.17.1",
         "graceful-fs": "^4.2.4",
         "greenlock": "^4.0.4",
@@ -77,6 +78,8 @@
         "@babel/preset-env": "^7.12.11",
         "@types/app-root-path": "^1.2.4",
         "@types/express": "^4.17.9",
+        "@types/express-fileupload": "^1.1.6",
+        "@types/graceful-fs": "^4.1.4",
         "@types/http-errors": "^1.8.0",
         "@types/lodash": "^4.14.167",
         "@types/nodemailer": "^6.4.0",
