--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
         "vue-i18n": "^8.22.2",
         "vue-material-design-icons": "^4.11.0",
         "vue-router": "^3.4.9",
+        "vue-toasted": "^1.1.28",
         "yaml": "^1.10.0"
     },
     "devDependencies": {
