--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "lodash": "^4.17.20",
         "mongoose": "^5.11.8",
         "ms": "^2.1.3",
+        "natsort": "^2.0.2",
         "neat-csv": "^6.0.0",
         "nodemailer": "^6.4.17",
         "normalize-url": "^5.3.0",
