--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "normalize-url": "^5.3.0",
         "nunjucks": "^3.2.2",
         "on-change": "^2.2.2",
+        "paper": "^0.12.11",
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
         "passport-local-mongoose": "^6.0.1",
