--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "compression": "^1.7.4",
         "concurrently": "^5.3.0",
         "connect-mongodb-session": "^2.4.1",
-        "core-js": "^3.8.1",
+        "core-js": "^3.8.2",
         "csv-string": "^4.0.1",
         "csvjs": "0.0.7",
         "express": "^4.17.1",
@@ -36,24 +36,24 @@
         "greenlock": "^4.0.4",
         "greenlock-express": "^4.0.3",
         "greenlock-store-fs": "^3.2.2",
-        "helmet": "^4.3.1",
+        "helmet": "^4.4.0",
         "hpp": "^0.2.3",
         "http-errors": "^1.8.0",
         "i18next": "^19.8.4",
-        "i18next-http-middleware": "^3.0.6",
+        "i18next-http-middleware": "^3.1.0",
         "lodash": "^4.17.20",
-        "mongoose": "^5.11.8",
+        "mongoose": "^5.11.12",
         "ms": "^2.1.3",
         "natsort": "^2.0.2",
-        "neat-csv": "^6.0.0",
+        "neat-csv": "^6.0.1",
         "nodemailer": "^6.4.17",
         "normalize-url": "^5.3.0",
         "nunjucks": "^3.2.2",
-        "on-change": "^2.2.2",
+        "on-change": "^2.2.3",
         "paper": "^0.12.11",
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
-        "passport-local-mongoose": "^6.0.1",
+        "passport-local-mongoose": "^6.1.0",
         "pm2": "^4.5.1",
         "pmx": "^1.6.7",
         "prompts": "^2.4.0",
@@ -64,7 +64,7 @@
         "uuid": "^8.3.2",
         "validator": "^13.5.2",
         "vue": "^2.6.11",
-        "vue-i18n": "^8.22.2",
+        "vue-i18n": "^8.22.4",
         "vue-material-design-icons": "^4.11.0",
         "vue-router": "^3.4.9",
         "vue-toasted": "^1.1.28",
@@ -80,42 +80,42 @@
         "@babel/plugin-syntax-decorators": "^7.12.1",
         "@babel/preset-env": "^7.12.11",
         "@types/app-root-path": "^1.2.4",
-        "@types/express": "^4.17.9",
+        "@types/express": "^4.17.11",
         "@types/express-fileupload": "^1.1.6",
         "@types/graceful-fs": "^4.1.4",
         "@types/http-errors": "^1.8.0",
         "@types/lodash": "^4.14.167",
         "@types/nodemailer": "^6.4.0",
         "@types/nunjucks": "^3.1.3",
-        "@types/passport": "^1.0.4",
+        "@types/passport": "^1.0.5",
         "@types/passport-local": "^1.0.33",
         "@types/string-strip-html": "^5.0.0",
         "@types/uuid": "^8.3.0",
-        "@types/validator": "^13.1.2",
+        "@types/validator": "^13.1.3",
         "@types/vue": "^2.0.0",
-        "@types/webpack": "^4.41.25",
+        "@types/webpack": "^4.41.26",
         "@types/webpack-env": "^1.16.0",
-        "@vue/cli-plugin-babel": "~4.5.0",
-        "@vue/cli-plugin-eslint": "~4.5.0",
-        "@vue/cli-service": "~4.5.0",
+        "@vue/cli-plugin-babel": "^4.5.10",
+        "@vue/cli-plugin-eslint": "^4.5.10",
+        "@vue/cli-service": "^4.5.10",
         "babel-eslint": "^10.1.0",
         "babel-loader": "^8.2.2",
         "babel-plugin-add-module-exports": "^1.0.4",
         "cache-loader": "^4.1.0",
         "eslint": "^6.7.2",
         "eslint-plugin-vue": "^6.2.2",
-        "fork-ts-checker-webpack-plugin": "^6.0.8",
-        "less": "^4.0.0",
+        "fork-ts-checker-webpack-plugin": "^6.1.0",
+        "less": "^4.1.0",
         "less-loader": "^7.2.1",
-        "nodemon": "^2.0.6",
+        "nodemon": "^2.0.7",
         "renewed-nunjucks-loader": "file:./webpack/renewed-nunjucks-loader",
         "terser-webpack-plugin": "^4.2.3",
         "thread-loader": "^3.0.1",
-        "ts-loader": "^8.0.12",
+        "ts-loader": "^8.0.14",
         "tsconfig-paths-webpack-plugin": "^3.3.0",
         "typescript": "^4.1.3",
         "vue-template-compiler": "^2.6.11",
-        "webpack": "^4.44.2",
+        "webpack": "^4.46.0",
         "webpack-cli": "^3.3.12",
         "webpack-node-externals": "^2.5.2"
     },
