--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "i18next-http-middleware": "^3.1.0",
         "lodash": "^4.17.20",
         "mongoose": "^5.11.13",
+        "mongoose-autopopulate": "^0.12.3",
         "ms": "^2.1.3",
         "natsort": "^2.0.2",
         "neat-csv": "^6.0.1",
