--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
         "http-errors": "^1.8.0",
         "i18next": "^19.8.4",
         "i18next-http-middleware": "^3.1.0",
+        "is-svg": "^4.2.1",
         "lodash": "^4.17.20",
+        "mkdirp": "^1.0.4",
         "mongoose": "^5.11.13",
         "mongoose-autopopulate": "^0.12.3",
         "ms": "^2.1.3",
@@ -86,6 +88,7 @@
         "@types/graceful-fs": "^4.1.4",
         "@types/http-errors": "^1.8.0",
         "@types/lodash": "^4.14.168",
+        "@types/mkdirp": "^1.0.1",
         "@types/nodemailer": "^6.4.0",
         "@types/nunjucks": "^3.1.3",
         "@types/passport": "^1.0.5",
