--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "express": "^4.17.1",
         "express-fileupload": "^1.2.1",
         "express-session": "^1.17.1",
+        "fresh": "^0.5.2",
         "graceful-fs": "^4.2.4",
         "greenlock": "^4.0.4",
         "greenlock-express": "^4.0.3",
@@ -85,6 +86,7 @@
         "@types/app-root-path": "^1.2.4",
         "@types/express": "^4.17.11",
         "@types/express-fileupload": "^1.1.6",
+        "@types/fresh": "^0.5.0",
         "@types/graceful-fs": "^4.1.4",
         "@types/http-errors": "^1.8.0",
         "@types/lodash": "^4.14.168",
