--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "express": "^4.17.1",
         "express-fileupload": "^1.2.1",
         "express-session": "^1.17.1",
+        "file-type": "^16.2.0",
         "fresh": "^0.5.2",
         "graceful-fs": "^4.2.5",
         "greenlock": "^4.0.4",
