--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "core-js": "^3.8.3",
         "csv-string": "^4.0.1",
         "csvjs": "0.0.7",
+        "deepdash": "^5.3.5",
         "express": "^4.17.1",
         "express-fileupload": "^1.2.1",
         "express-session": "^1.17.1",
