--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "express": "^4.17.1",
         "express-fileupload": "^1.2.1",
         "express-session": "^1.17.1",
+        "fast-levenshtein": "^3.0.0",
         "file-type": "^16.2.0",
         "fresh": "^0.5.2",
         "graceful-fs": "^4.2.6",
