--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
         "bcryptjs": "^2.4.3",
         "command-line-args": "^5.1.1",
         "compression": "^1.7.4",
-        "concurrently": "^5.3.0",
         "connect-mongodb-session": "^2.4.1",
         "core-js": "^3.9.0",
         "csv-string": "^4.0.1",
@@ -45,7 +44,6 @@
         "http-errors": "^1.8.0",
         "i18next": "^19.9.0",
         "i18next-http-middleware": "^3.1.0",
-        "is-svg": "^4.2.1",
         "lodash": "^4.17.21",
         "mkdirp": "^1.0.4",
         "mongoose": "^5.11.18",
@@ -53,7 +51,7 @@
         "ms": "^2.1.3",
         "natsort": "^2.0.2",
         "neat-csv": "^6.0.1",
-        "nodemailer": "^6.4.18",
+        "nodemailer": "^6.5.0",
         "normalize-url": "^5.3.0",
         "nunjucks": "^3.2.3",
         "on-change": "^2.2.3",
@@ -61,7 +59,7 @@
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
         "passport-local-mongoose": "^6.1.0",
-        "pm2": "^4.5.4",
+        "pm2": "^4.5.5",
         "pmx": "^1.6.7",
         "prompts": "^2.4.0",
         "reflect-metadata": "^0.1.13",
@@ -74,18 +72,19 @@
         "vue-i18n": "^8.23.0",
         "vue-material-design-icons": "^4.11.0",
         "vue-router": "^3.5.1",
+        "vue-textarea-autosize": "^1.1.1",
         "vue-toasted": "^1.1.28",
         "yaml": "^1.10.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.13.1",
+        "@babel/core": "^7.13.8",
         "@babel/node": "^7.13.0",
         "@babel/plugin-proposal-class-properties": "^7.13.0",
         "@babel/plugin-proposal-decorators": "^7.13.5",
-        "@babel/plugin-proposal-nullish-coalescing-operator": "^7.13.0",
-        "@babel/plugin-proposal-optional-chaining": "^7.13.0",
+        "@babel/plugin-proposal-nullish-coalescing-operator": "^7.13.8",
+        "@babel/plugin-proposal-optional-chaining": "^7.13.8",
         "@babel/plugin-syntax-decorators": "^7.12.13",
-        "@babel/preset-env": "^7.13.5",
+        "@babel/preset-env": "^7.13.8",
         "@types/app-root-path": "^1.2.4",
         "@types/express": "^4.17.11",
         "@types/express-fileupload": "^1.1.6",
@@ -111,6 +110,7 @@
         "babel-loader": "^8.2.2",
         "babel-plugin-add-module-exports": "^1.0.4",
         "cache-loader": "^4.1.0",
+        "concurrently": "^6.0.0",
         "eslint": "^6.7.2",
         "eslint-plugin-vue": "^6.2.2",
         "fork-ts-checker-webpack-plugin": "^6.1.0",
