--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
         "vue-i18n": "^8.23.0",
         "vue-material-design-icons": "^4.11.0",
         "vue-router": "^3.5.1",
+        "vue-simple-context-menu": "^3.4.1",
         "vue-textarea-autosize": "^1.1.1",
         "vue-toasted": "^1.1.28",
         "yaml": "^1.10.0"
@@ -113,7 +114,7 @@
         "concurrently": "^6.0.0",
         "eslint": "^6.7.2",
         "eslint-plugin-vue": "^6.2.2",
-        "fork-ts-checker-webpack-plugin": "^6.1.0",
+        "fork-ts-checker-webpack-plugin": "^6.1.1",
         "less": "^4.1.1",
         "less-loader": "^7.3.0",
         "nodemon": "^2.0.7",
@@ -122,7 +123,7 @@
         "thread-loader": "^3.0.1",
         "ts-loader": "^8.0.17",
         "tsconfig-paths-webpack-plugin": "^3.3.0",
-        "typescript": "^4.2.2",
+        "typescript": "^4.2.3",
         "vue-template-compiler": "^2.6.11",
         "webpack": "^4.46.0",
         "webpack-cli": "^3.3.12",
