--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
         "babel-eslint": "^10.1.0",
         "babel-loader": "^8.2.2",
         "babel-plugin-add-module-exports": "^1.0.4",
+        "browser-image-compression": "^1.0.14",
         "cache-loader": "^4.1.0",
         "concurrently": "^6.0.0",
         "eslint": "^6.7.2",
