--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
         "reflect-metadata": "^0.1.13",
         "source-map-support": "^0.5.19",
         "string-strip-html": "^8.2.5",
+        "tippy.js": "^6.3.1",
         "ursa-optional": "^0.10.2",
         "uuid": "^8.3.2",
         "validator": "^13.5.2",
