--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     },
     "dependencies": {
         "@greenlock/manager": "^3.1.0",
-        "@pm2/io": "^4.3.5",
+        "@pm2/io": "^5.0.0",
         "acme-http-01-standalone": "^3.0.5",
         "app-root-path": "^3.0.0",
         "bcryptjs": "^2.4.3",
         "command-line-args": "^5.1.1",
         "compression": "^1.7.4",
         "connect-mongodb-session": "^2.4.1",
-        "core-js": "^3.9.1",
+        "core-js": "^3.10.0",
         "csv-string": "^4.0.1",
         "csvjs": "0.0.7",
         "deepdash": "^5.3.5",
@@ -46,7 +46,7 @@
         "i18next-http-middleware": "^3.1.0",
         "lodash": "^4.17.21",
         "mkdirp": "^1.0.4",
-        "mongoose": "^5.12.2",
+        "mongoose": "^5.12.3",
         "mongoose-autopopulate": "^0.12.3",
         "ms": "^2.1.3",
         "natsort": "^2.0.2",
@@ -59,12 +59,13 @@
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
         "passport-local-mongoose": "^6.1.0",
-        "pm2": "^4.5.5",
+        "pm2": "^4.5.6",
         "pmx": "^1.6.7",
-        "prompts": "^2.4.0",
+        "prompts": "^2.4.1",
         "reflect-metadata": "^0.1.13",
         "source-map-support": "^0.5.19",
-        "string-strip-html": "^8.2.7",
+        "string-strip-html": "^8.2.9",
+        "sweetalert": "^2.1.2",
         "tippy.js": "^6.3.1",
         "ursa-optional": "^0.10.2",
         "uuid": "^8.3.2",
@@ -79,7 +80,7 @@
         "yaml": "^1.10.2"
     },
     "devDependencies": {
-        "@babel/core": "^7.13.13",
+        "@babel/core": "^7.13.14",
         "@babel/node": "^7.13.13",
         "@babel/plugin-proposal-class-properties": "^7.13.0",
         "@babel/plugin-proposal-decorators": "^7.13.5",
@@ -123,7 +124,7 @@
         "renewed-nunjucks-loader": "file:./webpack/renewed-nunjucks-loader",
         "terser-webpack-plugin": "^4.2.3",
         "thread-loader": "^3.0.1",
-        "ts-loader": "^8.0.18",
+        "ts-loader": "^8.1.0",
         "tsconfig-paths-webpack-plugin": "^3.5.1",
         "typescript": "^4.2.3",
         "vue-template-compiler": "^2.6.11",
