--- a/package.json
+++ b/package.json
@@ -3,18 +3,21 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
+        "setup": "npm install --only=production && pm2 install pm2-logrotate && node ./setup.js",
+        "config": "node ./setup.js",
         "start": "pm2 start ecosystem.config.js",
         "stop": "pm2 stop ecosystem.config.js",
-        "restart:dev": "npm stop && npm run dev:serve",
+        "restart": "pm2 restart ecosystem.config.js",
         "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
         "dev:frontend": "vue-cli-service build --mode development --watch",
         "dev:backend": "webpack --mode development --watch --config webpack.config.server.js",
         "dev:serve": "pm2 start ecosystem.config.js --env development --deep-monitoring --source-map-support",
+        "dev:setup": "npm install && pm2 install pm2-logrotate && node ./setup.js",
+        "dev:restart": "npm stop && npm run dev:serve",
         "build": "npm run build:backend && npm run build:frontend",
         "build:frontend": "vue-cli-service build --no-unsafe-inline",
         "build:backend": "webpack --mode production --config webpack.config.server.js",
-        "lint": "vue-cli-service lint",
-        "setup": "npm install && pm2 install pm2-logrotate && node ./setup.js"
+        "lint": "vue-cli-service lint"
     },
     "dependencies": {
         "@greenlock/manager": "^3.1.0",
