fix production mode

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "acme-http-01-standalone": "^3.0.5",
         "app-root-path": "^3.0.0",
         "bcryptjs": "^2.4.3",
+        "browser-image-compression": "^1.0.14",
         "command-line-args": "^5.1.1",
         "compression": "^1.7.4",
         "connect-mongodb-session": "^2.4.1",
@@ -70,6 +71,7 @@
         "string-strip-html": "^8.2.13",
         "sweetalert": "^2.1.2",
         "tippy.js": "^6.3.1",
+        "tslib": "^2.2.0",
         "ursa-optional": "^0.10.2",
         "uuid": "^8.3.2",
         "validator": "^13.5.2",
@@ -115,7 +117,6 @@
         "babel-eslint": "^10.1.0",
         "babel-loader": "^8.2.2",
         "babel-plugin-add-module-exports": "^1.0.4",
-        "browser-image-compression": "^1.0.14",
         "cache-loader": "^4.1.0",
         "concurrently": "^6.0.2",
         "eslint": "^6.7.2",
