add some more scripts to package

--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
         "start": "pm2 start ecosystem.config.js",
         "stop": "pm2 stop ecosystem.config.js",
         "restart": "pm2 restart ecosystem.config.js",
+        "logrotate": "pm2 logrotate",
+        "startup": "pm2 startup",
+        "unstartup": "pm2 unstartup",
+        "upstartup": "pm2 unstartup && pm2 startup",
         "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
         "dev:frontend": "vue-cli-service build --mode development --watch",
         "dev:backend": "webpack --mode development --watch --config webpack.config.server.js",
