--- a/package.json
+++ b/package.json
@@ -29,11 +29,14 @@
         "@pm2/io": "^5.0.0",
         "acme-http-01-standalone": "^3.0.5",
         "app-root-path": "^3.0.0",
+        "bcryptjs": "^2.4.3",
         "browser-image-compression": "^1.0.14",
         "command-line-args": "^5.1.1",
         "compression": "^1.7.4",
         "connect-mongodb-session": "^2.4.1",
         "core-js": "^3.12.1",
+        "csv-string": "^4.0.1",
+        "csvjs": "0.0.7",
         "deepdash": "^5.3.7",
         "express": "^4.17.1",
         "express-fileupload": "^1.2.1",
@@ -52,10 +55,11 @@
         "i18next-http-middleware": "^3.1.1",
         "lodash": "^4.17.21",
         "mkdirp": "^1.0.4",
-        "mongoose": "^5.12.9",
+        "mongoose": "^5.12.8",
         "mongoose-autopopulate": "^0.13.0",
         "ms": "^2.1.3",
         "natsort": "^2.0.2",
+        "neat-csv": "^6.0.1",
         "nodemailer": "^6.6.0",
         "normalize-url": "^6.0.0",
         "nunjucks": "^3.2.3",
@@ -65,6 +69,7 @@
         "passport-local": "^1.0.0",
         "passport-local-mongoose": "^6.1.0",
         "pm2": "^4.5.6",
+        "pmx": "^1.6.7",
         "prompts": "^2.4.1",
         "reflect-metadata": "^0.1.13",
         "source-map-support": "^0.5.19",
@@ -121,7 +126,7 @@
         "concurrently": "^6.1.0",
         "eslint": "^6.7.2",
         "eslint-plugin-vue": "^6.2.2",
-        "fork-ts-checker-webpack-plugin": "^6.2.8",
+        "fork-ts-checker-webpack-plugin": "^6.2.7",
         "less": "^4.1.1",
         "less-loader": "^7.3.0",
         "nodemon": "^2.0.7",
