--- a/package.json
+++ b/package.json
@@ -29,14 +29,11 @@
         "@pm2/io": "^5.0.0",
         "acme-http-01-standalone": "^3.0.5",
         "app-root-path": "^3.0.0",
-        "bcryptjs": "^2.4.3",
         "browser-image-compression": "^1.0.14",
         "command-line-args": "^5.1.1",
         "compression": "^1.7.4",
         "connect-mongodb-session": "^2.4.1",
         "core-js": "^3.12.1",
-        "csv-string": "^4.0.1",
-        "csvjs": "0.0.7",
         "deepdash": "^5.3.7",
         "express": "^4.17.1",
         "express-fileupload": "^1.2.1",
@@ -55,11 +52,10 @@
         "i18next-http-middleware": "^3.1.1",
         "lodash": "^4.17.21",
         "mkdirp": "^1.0.4",
-        "mongoose": "^5.12.8",
+        "mongoose": "^5.12.9",
         "mongoose-autopopulate": "^0.14.0",
         "ms": "^2.1.3",
         "natsort": "^2.0.2",
-        "neat-csv": "^6.0.1",
         "nodemailer": "^6.6.0",
         "normalize-url": "^6.0.0",
         "nunjucks": "^3.2.3",
@@ -69,7 +65,6 @@
         "passport-local": "^1.0.0",
         "passport-local-mongoose": "^6.1.0",
         "pm2": "^4.5.6",
-        "pmx": "^1.6.7",
         "prompts": "^2.4.1",
         "reflect-metadata": "^0.1.13",
         "source-map-support": "^0.5.19",
@@ -99,17 +94,24 @@
         "@babel/plugin-syntax-decorators": "^7.12.13",
         "@babel/preset-env": "^7.14.2",
         "@types/app-root-path": "^1.2.4",
+        "@types/browser-image-compression": "^1.0.1",
+        "@types/command-line-args": "^5.0.0",
+        "@types/connect-mongodb-session": "^2.4.0",
         "@types/express": "^4.17.11",
         "@types/express-fileupload": "^1.1.6",
+        "@types/fast-levenshtein": "^0.0.1",
         "@types/fresh": "^0.5.0",
         "@types/graceful-fs": "^4.1.5",
         "@types/http-errors": "^1.8.0",
         "@types/lodash": "^4.14.169",
         "@types/mkdirp": "^1.0.1",
+        "@types/mongoose": "^5.10.5",
         "@types/nodemailer": "^6.4.1",
         "@types/nunjucks": "^3.1.4",
         "@types/passport": "^1.0.6",
         "@types/passport-local": "^1.0.33",
+        "@types/passport-local-mongoose": "^4.0.13",
+        "@types/prompts": "^2.0.11",
         "@types/string-strip-html": "^5.0.0",
         "@types/uuid": "^8.3.0",
         "@types/validator": "^13.1.3",
