--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
     "compilerOptions": {
         "allowJs": true,
-        "target": "es2019",
-        "module": "CommonJS",
+        "target": "ESNext",
+        "module": "ESNext",
         "outDir": ".",
         "rootDir": "src",
         "incremental": true,
