--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "setup": "npm install --only=production && pm2 install pm2-logrotate && node ./setup.js",
+        "setup": "npm install --only=production && pm2 install pm2-logrotate && node ./setup.js -cr",
         "upgrade": "npm install --only=production && npm run restart",
-        "config": "node ./setup.js",
+        "config": "node ./setup.js -c",
+        "register": "node ./setup.js -r",
         "start": "pm2 start ecosystem.config.js",
         "stop": "pm2 stop ecosystem.config.js",
         "restart": "pm2 restart ecosystem.config.js",
